tests/rustdoc-ui/rustc-check-passes.stderr
error: the feature `rustdoc_internals` has already been enabled
  --> $DIR/rustc-check-passes.rs:2:12
   |
LL | #![feature(rustdoc_internals)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: `#[deny(duplicate_features)]` on by default

error: aborting due to 1 previous error

