tests/rustdoc-ui/rustc-check-passes.rs
#![feature(rustdoc_internals)]
#![feature(rustdoc_internals)] //~ ERROR duplicate

pub fn foo() {}
